tests/experimental/error/unguarded_pre_in_contract.lus
node blah(in: int) returns (out: int) ;
(*@contract
  assume in > 0 ;
  guarantee out >= 0 ;
  guarantee out = (pre in) ;
*)
let
  out = pre in ;
tel